[package]
name = "taco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48" 
dirs = "4.0.0"
colored = "2"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["wrap_help", "color"]
