[package]
name = "taco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81" 
dirs = "4.0.0"
colored = "2"
color-eyre = "0.6.1"
