[package]
name = "taco"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145" 
dirs = "6.0.0"
colored = "3.0.0"
color-eyre = "0.6.5"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

